Added the close button to the phadia prime screen

--- a/index.html
+++ b/index.html
@@ -345,6 +345,9 @@
         </div>
         <img src="./assets/BLUE_POLLEN.png" class="splash-screen landscape-screen background-screen">
         <div id="phadiaPrime-content" class="container" style="display: none;">
+            <div class="closeButtonCont" id="phadiaPrimeClose">
+                <button class="closeButton" onClick="phadiaPrimeClose()"></button>
+            </div>
             <div class="row">
                 <div class="col">
                     <h2 style="color: white; text-align: center;">Thermo Scientific Phadia Prime Software</h2>
