--- a/index.html
+++ b/index.html
@@ -106,9 +106,11 @@
         
         div.overlayFrame { position: absolute; border: solid 1px black; background-color: white; position: absolute; z-index: 1000; }
 
-        div.closeButtonCont { position: fixed; top:0px; left:0px; width:3%; z-index: 1000;}
+        div.closeButtonCont { position: fixed; top:0px; left:0px; width:3%; z-index: 99;}
 
-        #showMainMenuBtn { position: fixed; bottom:1%; left:1%; width:5%; z-index: 1000;}
+        #videoCloseBtn {z-index: 101;}
+
+        #showMainMenuBtn { position: fixed; bottom:1%; left:1%; width:5%; z-index: 99;}
 
         button.closeButton {  -webkit-border-radius: 60px; -moz-border-radius: 60; border-radius: 60px; background-image: url("./assets/buttons/Close_Button.svg"); background-position: center; background-size: cover; background-repeat: no-repeat; border: 0; padding-top: 100%; width:100%;}
         button.mainMenuBtn {  -webkit-border-radius: 60px; -moz-border-radius: 60; border-radius: 60px; background-image: url("./assets/buttons/Carousel.png"); background-position: center; background-size: cover; background-repeat: no-repeat; border: 0; padding-top: 100%; width:100%;}
@@ -345,7 +347,7 @@
         </div>
         <img src="./assets/BLUE_POLLEN.png" class="splash-screen landscape-screen background-screen">
         <div id="phadiaPrime-content" class="container" style="display: none;">
-            <div class="closeButtonCont" id="phadiaPrimeClose">
+            <div class="closeButtonCont" id="phadiaPrimeClose" style="display: block;">
                 <button class="closeButton" onClick="phadiaPrimeClose()"></button>
             </div>
             <div class="row">
@@ -412,7 +414,7 @@
                 <button class="mainMenuBtn" onClick="showMainMenu()"></button>
             </div>
             <div id="mainMenuCont" class="row mainMenuCont h-100 menu" style="display: none;">
-                <div class="closeButtonCont" id="mainMenuCloseBtn">
+                <div class="closeButtonCont" id="mainMenuCloseBtn" style="display: block;">
                     <button class="closeButton" onClick="mainMenuClose()"></button>
                 </div>
                 <div class="col-md-8">
