--- a/index.html
+++ b/index.html
@@ -289,6 +289,18 @@
             position: relative;
         }
 
+        .fill-height-or-more {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .fill-height-or-more > div {
+              flex: 1;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+        }
+
         </style>
 </head>
 
@@ -355,50 +367,44 @@
                     <h2 style="color: white; text-align: center;">Thermo Scientific Phadia Prime Software</h2>
                 </div>
             </div>
-            <div class="row">
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Consumables.mp4" data-video-type="video/mp4">
+            <div style="display: flex; flex-direction: column;">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Consumables.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-1.png" class="img-responsive center-block"/>
                 </div>
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Managing_Request.mp4" data-video-type="video/mp4">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Managing_Request.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-2.png" class="img-responsive center-block"/>
                 </div>
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Connectivity.mp4" data-video-type="video/mp4">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Connectivity.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-3.png" class="img-responsive center-block"/>
                 </div>
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_DataBases.mp4" data-video-type="video/mp4">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_DataBases.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-4.png" class="img-responsive center-block"/>
                 </div>
-            </div>
-            <div class="row">
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_EventLog.mp4" data-video-type="video/mp4">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_EventLog.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-5.png" class="img-responsive center-block"/>
                 </div>
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Help_And_Search.mp4" data-video-type="video/mp4">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Help_And_Search.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-6.png" class="img-responsive center-block"/>
                 </div>
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Lab_Community.mp4" data-video-type="video/mp4">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Lab_Community.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-7.png" class="img-responsive center-block"/>
                 </div>
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Outsourced_Tests.mp4" data-video-type="video/mp4">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Outsourced_Tests.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-8.png" class="img-responsive center-block"/>
                 </div>
-            </div>
-            <div class="row">
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Settings.mp4" data-video-type="video/mp4">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Settings.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-9.png" class="img-responsive center-block"/>
                 </div>
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Results.mp4" data-video-type="video/mp4">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Results.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-10.png" class="img-responsive center-block"/>
                 </div>
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Rack.mp4" data-video-type="video/mp4">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Rack.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-11.png" class="img-responsive center-block"/>
                 </div>
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Quality.mp4" data-video-type="video/mp4">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_Quality.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-12.png" class="img-responsive center-block"/>
                 </div>
-            </div>
-            <div class="row">
-                <div class='primeItemTile col-xs-3' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_StockManager.mp4" data-video-type="video/mp4">
+                <div class='' data-video-url="./assets/PhadiaPrime/Videos/PhadiaPrime_StockManager.mp4" data-video-type="video/mp4">
                     <img src="./assets/PhadiaPrime/pp_button-13.png" class="img-responsive center-block"/>
                 </div>
             </div>
