--- a/index.html
+++ b/index.html
@@ -283,6 +283,17 @@
             }
         }
 
+        @media only screen and (min-width: 1919px) {
+            div.primeItemTile { 
+                width: 19% 
+            }
+
+            div.tileContainer {
+                margin-top: -2%;
+                margin-left: 15%;
+            }
+        }
+
         .scientific-logo {
             position: relative;
             margin: auto;
