--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         
         div.overlayFrame { position: absolute; border: solid 1px black; background-color: white; position: absolute; z-index: 1000; }
 
-        div.closeButtonCont { position: fixed; top:0px; left:0px; width:3%; z-index: 99;}
+        div.closeButtonCont { position: fixed; top:2%; left:1%; width:5%; z-index: 99;}
 
         #videoCloseBtn {z-index: 101;}
 
@@ -283,7 +283,7 @@
             }
         }
 
-        @media only screen and (min-width: 1919px) {
+        @media only screen and (min-width: 768px) {
             div.primeItemTile { 
                 width: 19% 
             }
