--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         #showMainMenuBtn { position: fixed; bottom:1%; left:1%; width:5%; z-index: 99;}
 
-        button.closeButton {  -webkit-border-radius: 60px; -moz-border-radius: 60; border-radius: 60px; background-image: url("./assets/buttons/Close_Button.svg"); background-position: center; background-size: cover; background-repeat: no-repeat; border: 0; padding-top: 100%; width:100%;}
+        button.closeButton {  -webkit-border-radius: 60px; -moz-border-radius: 60; border-radius: 60px; background-image: url("./assets/buttons/Close_Button.svg"); background-position: center; background-size: cover; background-repeat: no-repeat; border: 0; padding-top: 100%; width:100%; background-color: transparent;}
         button.mainMenuBtn {  -webkit-border-radius: 60px; -moz-border-radius: 60; border-radius: 60px; background-image: url("./assets/buttons/Carousel.png"); background-position: center; background-size: cover; background-repeat: no-repeat; border: 0; padding-top: 100%; width:100%;}
         .noselect {
           -webkit-touch-callout: none;
@@ -217,6 +217,10 @@
             z-index: -1;
         }
 
+        .systems-logo {
+            height: 75%;
+        }
+
 
         /*div.topRow {padding-top: 20px;}*/
         @media only screen and (max-width: 415px) {
@@ -291,6 +295,10 @@
             div.tileContainer {
                 margin-top: -2%;
                 margin-left: 15%;
+            }
+
+            .systems-logo {
+                height: 70%;
             }
         }
 
@@ -443,7 +451,7 @@
         </div>
         <div id="splash-content" class="splash-content container-fluid">
             <div id="phadiaLogo" class="row menu">
-                <img src="./assets/Phadia_Systems_Logo.svg" class="splash-screen systems-logo img-responsive center-block" style="height: 75%;" />
+                <img src="./assets/Phadia_Systems_Logo.svg" class="splash-screen systems-logo img-responsive center-block" />
             </div>
             <div id="thermoLogo" class="row">
                 <img src="./assets/Thermo-Scientific-Single-Line_Cropped.svg" class="splash-screen scientific-logo" />
