--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="./js/jquery.mobile.custom.js"></script> 
     <script type="text/javascript" src="./js/index.js"></script>
 
-    <title>Phadia Thermo Thingy</title>
+    <title>Thermo Fisher - Phadia</title>
     
     <style>
         /* For mobile phones: */
@@ -341,6 +341,16 @@
             margin: auto;
         }
 
+        .slide-up
+        {
+            bottom: 0px !important;
+        }
+
+        .slide-down
+        {
+            bottom: -1500px !important;
+        }
+
         </style>
 </head>
 
@@ -449,7 +459,7 @@
                 </div>
             </div>
         </div>
-        <div id="splash-content" class="splash-content container-fluid">
+        <div id="splash-content" class="splash-content container-fluid" style="height:100%;">
             <div id="phadiaLogo" class="row menu">
                 <img src="./assets/Phadia_Systems_Logo.svg" class="splash-screen systems-logo img-responsive center-block" />
             </div>
@@ -459,7 +469,7 @@
             <div id="showMainMenuBtn">
                 <button class="mainMenuBtn" onClick="showMainMenu()"></button>
             </div>
-            <div id="mainMenuCont" class="row mainMenuCont h-100 menu" style="display: none;">
+            <div id="mainMenuCont" class="row mainMenuCont h-100 menu" style="position: absolute; bottom:-1000px; left: 12.5vw;">
                 <div class="closeButtonCont" id="mainMenuCloseBtn" style="display: block;">
                     <button class="closeButton" onClick="mainMenuClose()"></button>
                 </div>
