made the clickable splash screen take up more of the screen

--- a/index.html
+++ b/index.html
@@ -460,11 +460,13 @@
             </div>
         </div>
         <div id="splash-content" class="splash-content container-fluid" style="height:100%;">
-            <div id="phadiaLogo" class="row menu">
-                <img src="./assets/Phadia_Systems_Logo.svg" class="splash-screen systems-logo img-responsive center-block" />
-            </div>
-            <div id="thermoLogo" class="row">
-                <img src="./assets/Thermo-Scientific-Single-Line_Cropped.svg" class="splash-screen scientific-logo" />
+            <div style="height: 100%;" class="splash-screen">
+                <div id="phadiaLogo" class="row menu">
+                    <img src="./assets/Phadia_Systems_Logo.svg" class="systems-logo img-responsive center-block" />
+                </div>
+                <div id="thermoLogo" class="row">
+                    <img src="./assets/Thermo-Scientific-Single-Line_Cropped.svg" class="scientific-logo" />
+                </div>
             </div>
             <div id="showMainMenuBtn">
                 <button class="mainMenuBtn" onClick="showMainMenu()"></button>
