--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 
         #videoCloseBtn {z-index: 101;}
 
-        #showMainMenuBtn { position: fixed; bottom:1%; left:1%; width:5%; z-index: 99;}
+        #showMainMenuBtn, #showMainMenuBtnVideo { position: fixed; bottom:1%; left:1%; width:5%; z-index: 99;}
 
         button.closeButton {  -webkit-border-radius: 60px; -moz-border-radius: 60; border-radius: 60px; background-image: url("./assets/buttons/Close_Button.svg"); background-position: center; background-size: cover; background-repeat: no-repeat; border: 0; padding-top: 100%; width:100%; background-color: transparent;}
-        button.mainMenuBtn {  -webkit-border-radius: 60px; -moz-border-radius: 60; border-radius: 60px; background-image: url("./assets/buttons/Carousel.png"); background-position: center; background-size: cover; background-repeat: no-repeat; border: 0; padding-top: 100%; width:100%;}
+        button.mainMenuBtn {  -webkit-border-radius: 60px; -moz-border-radius: 60; border-radius: 60px; background-image: url("./assets/buttons/Carousel.png"); background-position: center; background-size: cover; background-repeat: no-repeat; border: 0; padding-top: 100%; width:100%; background-color: transparent;}
         .noselect {
           -webkit-touch-callout: none;
             -webkit-user-select: none;
@@ -369,6 +369,9 @@
                     <div class="col" style="text-align: center;">
                         <span id="playAllText" class="playAllText">Play All</span>
                     </div>
+                </div>
+                <div id="showMainMenuBtnVideo">
+                    <button class="mainMenuBtn" onClick="showMainMenu()"></button>
                 </div>
             </div>
             <div class="d-flex col-xs-6 infoBlock" style="text-align: center;">
