--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                 <button class="mainMenuBtn" onClick="showMainMenu()"></button>
             </div>
             <div id="mainMenuCont" class="row mainMenuCont h-100 menu" style="position: absolute; bottom:-1000px; left: 12.5vw;">
-                <div class="closeButtonCont" id="mainMenuCloseBtn" style="display: block;">
+                <div class="closeButtonCont" id="mainMenuCloseBtn" style="display: none;">
                     <button class="closeButton" onClick="mainMenuClose()"></button>
                 </div>
                 <div class="col-md-8" style="padding-right: 0px; margin-right: -2%;">
