Added a manifest file to force landscape on mobile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> 
 <head>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="custom_icon.png">
     <meta name="apple-mobile-web-app-title" content="Cascadion">
     <meta name="apple-mobile-web-app-capable" content="yes">
