Changed the order of the manifest file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html> 
 <html> 
 <head>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="manifest" href="manifest.json">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="custom_icon.png">
-    <meta name="apple-mobile-web-app-title" content="Cascadion">
+    <meta name="apple-mobile-web-app-title" content="Phadia Prime">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="translucent black">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/bootstrap-theme.min.css">
