Styled the main menu and phadia logo for ipad

--- a/index.html
+++ b/index.html
@@ -245,6 +245,12 @@
             margin-top: 0.25%;
         }
 
+        #mainMenuCont {
+            position: absolute;
+            bottom:-1000px;
+            left: 12.5vw;
+        }
+
         /*div.topRow {padding-top: 20px;}*/
         @media only screen and (max-width: 415px) {
             /*div.videContCell { display:block; text-align:center; }*/
@@ -315,6 +321,21 @@
         /*Ipads*/
         @media only screen and (max-width: 1024px) {
             #playAllBut {bottom: 10%; right: 20%;}
+            div.deviceTile {
+                height: 26vh;
+            }
+
+            div.sideTile {
+                height: 17.3vh;
+            }
+
+            #mainMenuCont {
+                bottom: 15%;
+            }
+
+            #phadiaLogo {
+                margin-top: 10%;
+            }
         }
 
         @media only screen and (max-width: 1440px) {
