Fixed media queries

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         }
 
         /*Ipads*/
-        @media only screen and (max-width: 1024px) {
+        @media only screen and (width: 1024px) and (height: 768px) {
             #playAllBut {bottom: 10%; right: 20%;}
             div.deviceTile {
                 height: 26vh;
@@ -333,9 +333,6 @@
                 bottom: 15%;
             }
 
-            #phadiaLogo {
-                margin-top: 10%;
-            }
         }
 
         @media only screen and (max-width: 1440px) {
