Added more styling for ipads

--- a/index.html
+++ b/index.html
@@ -333,6 +333,15 @@
                 bottom: 15%;
             }
 
+            #phadiaLogo {
+                margin-top: 10%;
+            }
+
+            div.tileContainer {
+                margin-left: 7% !important;
+                width: 100vw;
+            }
+
         }
 
         @media only screen and (max-width: 1440px) {
