--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                             <img src="./assets/ImmunoCap/carousel.png" class="img-responsive center-block"/>
                         </div>
                         <div id="eliaTile" class="itemTile sideTile col tile" data-video-url="../assets/EliA/Phadia_ELIA.mp4" data-video-type="video/mp4">
-                            <img src="../assets/EliA/carousel.png" class="img-responsive center-block"/>
+                            <img src="./assets/EliA/carousel.png" class="img-responsive center-block"/>
                         </div>
                         
                     </div>
