Undid changing path to file

--- a/index.html
+++ b/index.html
@@ -572,10 +572,10 @@
                         <div  id="phadiaprimeTile" class="primeTile sideTile col tile">
                             <img src="./assets/PhadiaPrime/carousel.png" class="img-responsive center-block"/>
                         </div>
-                        <div id="immunocapTile" class="itemTile sideTile col tile" data-video-url="../assets/ImmunoCap/Phadia_ImmunoCAP.mp4" data-video-type="video/mp4">
+                        <div id="immunocapTile" class="itemTile sideTile col tile" data-video-url="./assets/ImmunoCap/Phadia_ImmunoCAP.mp4" data-video-type="video/mp4">
                             <img src="./assets/ImmunoCap/carousel.png" class="img-responsive center-block"/>
                         </div>
-                        <div id="eliaTile" class="itemTile sideTile col tile" data-video-url="../assets/EliA/Phadia_ELIA.mp4" data-video-type="video/mp4">
+                        <div id="eliaTile" class="itemTile sideTile col tile" data-video-url="./assets/EliA/Phadia_ELIA.mp4" data-video-type="video/mp4">
                             <img src="./assets/EliA/carousel.png" class="img-responsive center-block"/>
                         </div>
                         
