Added hotspot information for the Phadia200 tool

--- a/index.html
+++ b/index.html
@@ -593,153 +593,89 @@
         "camFocLength" : "30.00",
         "camSensorSize" : "20.12",
         "imageSize" : [540, 405],
-        "headline": "Cascadion SM Clinical Analyser",
-        "text": "Breaking the barrier between LC-MS/MS and the clinical lab",
+        "headline": "Phadia 200 System",
+        "text": "Achieve operational efficiency through automated testing and wealk-away performance",
         "hotspots": [
           {
-            "video": "Cascadion_HotSpot_01",
+            "video": "Phadia200_HotSpot_01",
             "visible": true,
             "position": [ -0.81, -0.5, 0.967 ],
-            "headline": "Sample Compartment",
-            "text": "Random access sample loading for continuous operation and fast turnaround times",
-            "valuemessage": "Random access sample loading for continuous operation and fast turnaround times",
+            "headline": "Reagent Carousel",
+            "text": "All reagents and samples are placed in one carousel with automatic barcode scanning for more convenience and reagent control",
+            "valuemessage": "All reagents and samples are placed in one varousel with automatic barcode scanning for more convenience and reagent control",
             "infotext": [
-              "Up to 60 samples can be loaded at a time",
-              "Different sample tube types into the same compartment",
-              "Accommodates serum, plasma and whole blood matrices"
+              "Sample loading area for up to 42 patient samples",
+              "Contains compartments for calibrators, surve controls, development solution, stop solution, conjugates, diluent and dilution plates",
+              "Automatic scanning of dedicated reagents",
+              "Tracking of reagent expiration date and onboard storage time",
+              "Ability to replenish reagent during specific time windows"
             ]
           },
           {
-            "video": "Cascadion_HotSpot_02",
+            "video": "Phadia200_HotSpot_02",
             "visible": true,
             "position": [ -0.695, -0.48, 0.8 ],
-            "headline": "Barcode Reader",
-            "text": "Samples with barcode-IDs are automatically scanned",
-            "valuemessage": "Samples with barcode-IDs are automatically scanned",
+            "headline": "Intrument Touch Screen, Phadia Prime Software, Status Indicator Light",
+            "text": "all relevant information is available at the hands of the operator via the intrument's Phadia(tm char) Prime enabled 9" touch screen",
+            "valuemessage": "all relevant information is available at the hands of the operator via the intrument's Phadia(tm char) Prime enabled 9" touch screen",
             "infotext": [
-              "Patient test query sent to LIS to download the request"
+              "Extensive instrument self-check and monitoring to ensure quality of test results",
+              "Operated via the instrument touchscreen and networked Phadia Prime PC's",
+              "Minimal hands-on time during the work shift",
+              "Status indicator light and sound alert"
             ]
           },
           {
-            "video": "Cascadion_HotSpot_03",
+            "video": "Phadia200_HotSpot_03",
             "visible": true,
             "position": [ -0.53, -0.5, 0.96 ],
-            "headline": "Reagent Rack",
-            "text": "Holds both reagents and controls and features automatic barcode scanning",
-            "valuemessage": "Holds both reagents and controls and features automatic barcode scanning",
-            "infotext": []
+            "headline": "Climate-Controlled Processing Chamber",
+            "text": "Maintains a temperature of 37(degrees char) C with controlled humidity for optimal ImmunoCAP(tm char) and EliA(tm char) testing conditions",
+            "valuemessage": "Maintains a temperature of 37(degrees char) C with controlled humidity for optimal ImmunoCAP(tm char) and EliA(tm char) testing conditions",
+            "infotext": [
+              "Provides consistent, stable testing conditions",
+            ]
           },
           {
-            "video": "Cascadion_HotSpot_04",
+            "video": "Phadia200_HotSpot_04",
             "visible": true,
             "position": [ 0.09, -0.5, 0.96 ],
-            "headline": "Calibrators",
-            "text": "Calibrators are loaded and processed in the sample rack",
-            "valuemessage": "Calibrators are loaded and processed in the sample rack",
-            "infotext": []
+            "headline": "Reagent Loading, ImmunoCAP(tm char) and EliA(tm char) Carrier Loading and Starting the Run",
+            "text": "Less than 15 minutes operator time needed to set up the system and start the run to produce up to 192 tests/8 hour shift",
+            "valuemessage": "Less than 15 minutes operator time needed to set up the system and start the run to produce up to 192 tests/8 hour shift",
+            "infotext": [
+              "Minimal operator time needed to load reagents and samples",
+              "After less than 15 minutes operator time, the assay run can be started",
+              "Automatic start-up process to prime the system and conduct quality controls",
+              "Up to 96 ImmunoCAP(tm char) or 48 EliA(tm char) test results in each batch, with approximate batch completion time of 4 hours including start up and shut down procedures"
+            ]
           },
           {
-            "video": "Cascadion_HotSpot_05",
+            "video": "Phadia200_HotSpot_05",
             "visible": true,
             "position": [ -0.25, -0.5, 1.05 ],
-            "headline": "Assay Kits",
-            "text": "Each assay is supplied with its own reagents and multiple assays can be run in parallel",
-            "valuemessage": "Each assay is supplied with its own reagents and multiple assays can be run in parallel",
-            "infotext": []
+            "headline": "Automated ImmunoCAP(tm char) and EliA(tm char) Test Well Carrier Identification and Dispensing",
+            "text": "Reduces hands-on time, minimizes errors and provides full traceability for every test",
+            "valuemessage": "Reduces hands-on time, minimizes errors and provides full traceability for every test",
+            "infotext": [
+              "Automated barcode scanning for identification and traceability of every test".
+              "Automated dispensing of ImmunoCAP and EliA wells, no hands-on time for test dispensing",
+              "Increases productivity and minimizes operator errors"
+            ]
           },
           {
-            "video": "Cascadion_HotSpot_06",
+            "video": "Phadia200_HotSpot_06",
             "visible": true,
             "position": [ 0.143, -0.448, 1.29 ],
-            "headline": "Start Button",
-            "text": "Start your run with touchscreen operation",
-            "valuemessage": "Start your run with touchscreen operation",
-            "infotext": []
-          },
-          {
-            "video": "Cascadion_HotSpot_07",
-            "visible": true,
-            "position": [ -0.748, -0.37, 1.32 ],
-            "headline": "Sample Preparation",
-            "text": "Fully automated, walkaway sample preparation",
-            "valuemessage": "Fully automated, walkaway sample preparation",
+            "headline": "Test Carrier Loading and Reflex Testing",
+            "text": "ImmunoCAP(tm char) and Elia(tm char) removable test carrier trays hold up to 96 varriers in one tray and are automatically scanned for full traceability",
+            "valuemessage": "ImmunoCAP(tm char) and Elia(tm char) removable test carrier trays hold up to 96 varriers in one tray and are automatically scanned for full traceability",
             "infotext": [
-              "Liquid level sensing and clot detection to help ensure sample"
-            ]
-          },
-          {
-            "video": "Cascadion_HotSpot_08",
-            "visible": true,
-            "position": [-0.1, -0.44, 0.48 ],
-            "headline": "LC Unit for Chromatographic Separation",
-            "text": "Two channels for enhanced throughput with multiplexing capabilities",
-            "valuemessage": "Two channels for enhanced throughput with multiplexing capabilities",
-            "infotext": []
-          },
-          {
-            "video": "Cascadion_HotSpot_09",
-            "visible": true,
-            "position": [ -0.288, -0.44, 0.267 ],
-            "headline": "Quick Connect Cartridge",
-            "text": "Replace columns in seconds without the need for special tools",
-            "valuemessage": "Replace columns in seconds without the need for special tools",
-            "infotext": [
-              "USB-connection to keep track of injection count"
-            ]
-          },
-          {
-            "video": "Cascadion_HotSpot_10",
-            "visible": true,
-            "position": [ 0.065, -0.448, 0.267 ],
-            "headline": "TurboFlow Technology (sample clean up)",
-            "text": "Removes non-target molecules to ensure a clean sample is introduced to the MS",
-            "valuemessage": "Removes non-target molecules to ensure a clean sample is introduced to the MS",
-            "infotext": []
-          },
-          {
-            "video": "Cascadion_HotSpot_11",
-            "visible": true,
-            "position": [ 0.787, -0.586, 0.484 ],
-            "headline": "Triple Quadrupole Tandem Mass Spectrometry",
-            "text": "Sensitive detection and quantitation of small molecules run after run",
-            "valuemessage": "Sensitive detection and quantitation of small molecules run after run",
-            "infotext": [
-              "Many application areas including specialty tests in endocrinology and therapeutic drug monitoring"
-            ]
-          },
-          {
-            "video": "Cascadion_HotSpot_12",
-            "visible": true,
-            "position": [ 0.787, -0.417, 1.284 ],
-            "headline": "Color coded solvent bottles",
-            "text": "Ensures all bottles are placed in the correct location",
-            "valuemessage": "Ensures all bottles are placed in the correct location",
-            "infotext": [
-              ""
-            ]
-          },
-          {
-            "video": "Cascadion_HotSpot_13",
-            "visible": true,
-            "position": [ 0.575, -0.616, 0.865 ],
-            "headline": "Full Traceability",
-            "text": "Each result can be linked to the specific lot of reagent, calibrators and controls",
-            "valuemessage": "Each result can be linked to the specific lot of reagent, calibrators and controls",
-            "infotext": [
-              "Complete assay kits provide standardization among calibrators and reagents"
-            ]
-          },
-          {
-            "video": "Cascadion_HotSpot_14",
-            "visible": true,
-            "position": [ -0.005, -0.44, 1.399 ],
-            "headline": "Touchscreen",
-            "text": "Intuitive user interface with pictures and colors to guide operator actions",
-            "valuemessage": "Intuitive user interface with pictures and colors to guide operator actions",
-            "infotext": [
-              "Instrument status screen alerts the operator to any items that need attention",
-              "Sophisticated algorithms for accurate peak detection and integration",
-              "LIS connection for a fully automated workflow from sample loading to results reporting"
+              "Carrier trays are removable to enable refrigeration between runs",
+              "Load up to 96 test carriers in one tray",
+              "Several uniquely indentifiable trays can be used",
+              "Automated bar code scanning of trays to ensure full traceability",
+              "Batch processing with possibility to automatically start second batch after the first batch is ready, enabling reflex testing with limited hands on time"
             ]
           }
         ]
